--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,8 +12,8 @@
 
     <Button
         android:id="@+id/login"
-        android:layout_width="215dp"
-        android:layout_height="69dp"
+        android:layout_width="130dp"
+        android:layout_height="52dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -48,11 +48,10 @@
         android:layout_marginEnd="26dp"
         android:layout_marginRight="26dp"
         android:ems="10"
-        android:fontFamily="@font/architects_daughter"
         android:inputType="textPersonName"
         android:text="Email"
         android:textColor="@color/cardview_dark_background"
-        android:textSize="28dp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.851"
@@ -72,11 +71,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="83dp"
         android:ems="10"
-        android:fontFamily="@font/architects_daughter"
+
         android:inputType="textPersonName"
         android:text="Password"
         android:textColor="@color/cardview_dark_background"
-        android:textSize="28dp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,6 +93,7 @@
         app:backgroundTint="?android:attr/textColorSecondaryInverse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/login"
         app:layout_constraintVertical_bias="0.0" />
