--- a/app/src/main/res/layout/activity_gmach_details.xml
+++ b/app/src/main/res/layout/activity_gmach_details.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/city"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:background="@drawable/city"
+    android:id="@+id/city"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@drawable/sky"
     tools:context="Activities.GmachDetails">
 
 
@@ -24,19 +24,19 @@
 
     <TextView
         android:id="@+id/info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/alfa_slab_one"
+        android:layout_width="102dp"
+        android:layout_height="68dp"
+        android:fontFamily="@font/montez_regular"
         android:gravity="center"
         android:text="Info:"
-
-        android:textSize="36sp"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="55sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13" />
+        app:layout_constraintVertical_bias="0.127" />
 
     <EditText
         android:id="@+id/gmachName"
@@ -45,6 +45,7 @@
         android:ems="10"
         android:gravity="center"
         android:inputType="textPersonName"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,10 +58,10 @@
         android:id="@+id/Adress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alfa_slab_one"
         android:gravity="center"
         android:text="Adress:"
 
+        android:textColor="@color/cardview_dark_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +77,7 @@
         android:ems="10"
         android:gravity="center"
         android:inputType="textPersonName"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,10 +90,10 @@
         android:id="@+id/email"
         android:layout_width="68dp"
         android:layout_height="28dp"
-        android:fontFamily="@font/alfa_slab_one"
         android:gravity="center"
         android:text="Email:"
 
+        android:textColor="@color/cardview_dark_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,6 +109,7 @@
         android:ems="10"
         android:gravity="center"
         android:inputType="textEmailAddress"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,9 +122,9 @@
         android:id="@+id/openingHours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alfa_slab_one"
         android:gravity="center"
         android:text="Opening Hours:"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,6 +140,7 @@
         android:ems="10"
         android:gravity="center"
         android:inputType="textPassword"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -149,9 +153,9 @@
         android:id="@+id/phoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alfa_slab_one"
         android:gravity="center"
         android:text="Phone Number:"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -161,11 +165,12 @@
 
     <EditText
         android:id="@+id/gPhone"
-        android:layout_width="217dp"
-        android:layout_height="33dp"
+        android:layout_width="214dp"
+        android:layout_height="42dp"
         android:ems="10"
         android:gravity="center"
         android:inputType="phone"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -177,9 +182,9 @@
         android:id="@+id/chat1"
         android:layout_width="137dp"
         android:layout_height="48dp"
-        android:fontFamily="@font/alfa_slab_one"
         android:text="chat"
-        app:backgroundTint="#00FFFFFF"
+        android:textColor="@color/cardview_dark_background"
+        app:backgroundTint="?android:attr/textColorSecondaryInverse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.894"
@@ -192,8 +197,9 @@
         android:layout_width="144dp"
         android:layout_height="56dp"
         android:text="view prudocts"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="14sp"
-        app:backgroundTint="#00FFFFFF"
+        app:backgroundTint="?android:attr/textColorSecondaryInverse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.142"
@@ -216,8 +222,8 @@
         android:id="@+id/rank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alfa_slab_one"
         android:text="Ranke Us:"
+        android:textColor="@color/cardview_dark_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.727"
