--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sky"
     tools:context="Activities.Product">
 
     <ScrollView
@@ -31,26 +32,27 @@
                 android:id="@+id/productUpImg"
                 android:layout_width="132dp"
                 android:layout_height="79dp"
-                android:fontFamily="@font/architects_daughter"
-                android:textColor="#050202"
-                app:backgroundTint="#00FFFFFF"
+                android:textColor="@color/cardview_dark_background"
+                app:backgroundTint="?android:attr/textColorSecondaryInverse"
                 app:icon="@android:drawable/ic_menu_upload"
                 app:layout_constraintBottom_toBottomOf="@+id/ProductImage"
                 app:layout_constraintEnd_toEndOf="@+id/ProductImage"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/ProductImage"
-                app:layout_constraintTop_toTopOf="@+id/ProductImage" />
+                app:layout_constraintTop_toTopOf="@+id/ProductImage"
+                app:layout_constraintVertical_bias="0.428" />
 
             <EditText
                 android:id="@+id/ProductName"
-                android:layout_width="257dp"
+                android:layout_width="351dp"
                 android:layout_height="65dp"
                 android:layout_marginTop="24dp"
                 android:ems="10"
-                android:fontFamily="@font/architects_daughter"
                 android:inputType="textPersonName"
                 android:paddingLeft="80px"
                 android:text="Product Name"
-                android:textSize="30sp"
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -59,50 +61,53 @@
 
             <EditText
                 android:id="@+id/ProductDescription"
-                android:layout_width="173dp"
-                android:layout_height="99dp"
+                android:layout_width="343dp"
+                android:layout_height="88dp"
                 android:layout_marginTop="22dp"
                 android:ems="10"
-                android:fontFamily="@font/architects_daughter"
-                android:gravity="start|top"
+                android:gravity="start|top|center"
                 android:inputType="textMultiLine"
                 android:singleLine="false"
                 android:text="description"
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.492"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ProductName"
-                app:layout_constraintVertical_bias="0.044" />
+                app:layout_constraintVertical_bias="0.031" />
 
             <EditText
                 android:id="@+id/UnitsInStock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="351dp"
+                android:layout_height="65dp"
                 android:layout_marginTop="50dp"
                 android:ems="10"
-                android:fontFamily="@font/architects_daughter"
                 android:inputType="number"
                 android:paddingLeft="180px"
                 android:text="Units in stock"
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.535"
+                app:layout_constraintHorizontal_bias="0.533"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ProductDescription"
-                app:layout_constraintVertical_bias="0.145" />
+                app:layout_constraintVertical_bias="0.0" />
 
             <EditText
                 android:id="@+id/DaysToBurrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="339dp"
+                android:layout_height="56dp"
                 android:layout_marginTop="50dp"
                 android:ems="10"
-                android:fontFamily="@font/architects_daughter"
                 android:inputType="number"
                 android:text="Burrow time(in days)"
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.535"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/UnitsInStock"
                 app:layout_constraintVertical_bias="0.0" />
@@ -112,11 +117,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
-                android:fontFamily="@font/architects_daughter"
                 android:text="Add"
-                android:textColor="#150F0F"
+                android:textColor="@color/cardview_dark_background"
                 android:textSize="24sp"
-                app:backgroundTint="#00FFFFFF"
+                app:backgroundTint="?android:attr/textColorSecondaryInverse"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
