--- a/app/src/main/res/layout/activity_after_reserve.xml
+++ b/app/src/main/res/layout/activity_after_reserve.xml
@@ -3,7 +3,7 @@
     android:id="@+id/rl_custom_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B998BF"
+    android:background="@drawable/sky"
     android:padding="2dp">
 
     <ImageButton
@@ -20,7 +20,7 @@
         android:layout_width="295dp"
         android:layout_height="159dp"
         android:layout_centerInParent="true"
-        android:fontFamily="@font/architects_daughter"
+
         android:padding="25sp"
         android:text="Thank you! now, when the supplier will accept your request, you will see it in your private zone "
         android:textSize="20sp" />
