--- a/app/src/main/res/layout/activity_gmach_customers.xml
+++ b/app/src/main/res/layout/activity_gmach_customers.xml
@@ -4,16 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sky"
     android:orientation="vertical"
     tools:context="Activities.GmachCustomers">
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/architects_daughter"
-        android:text="My clients's reserves"
-        android:textSize="30sp" />
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -25,10 +18,19 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="76dp"
+                android:fontFamily="@font/montez_regular"
+                android:text="My clients's reserves"
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="40sp" />
+
             <ListView
                 android:id="@+id/reservelist"
                 android:layout_width="match_parent"
-                android:layout_height="660dp"
+                android:layout_height="648dp"
                 android:paddingLeft="100px">
 
             </ListView>
