--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/city"
+    android:background="@drawable/sky"
     tools:context="Activities.MainActivity">
 
 
@@ -14,24 +14,27 @@
         android:id="@+id/mainActivity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montez_regular"
+        android:gravity="center"
         android:text="What gmach do you want to find?"
-        android:textSize="30sp"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32" />
+        app:layout_constraintVertical_bias="0.225" />
 
     <Spinner
         android:id="@+id/mainActivity_category_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="131dp"
-        android:layout_marginBottom="244dp"
+        android:layout_marginTop="99dp"
+        android:layout_marginBottom="320dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />
 
@@ -61,15 +64,18 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/mainActivity_category_spinner"
-        app:layout_constraintVertical_bias="0.077" />
+        app:layout_constraintVertical_bias="0.041" />
 
     <Button
         android:id="@+id/search_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:layout_marginTop="105dp"
         android:layout_marginBottom="36dp"
         android:text="Search"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="20sp"
+        app:backgroundTint="?android:attr/textColorSecondaryInverse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,18 +90,23 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Search by name"
+        android:textColor="@color/cardview_dark_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/mainActivity_title"
-        app:layout_constraintVertical_bias="0.016" />
+        app:layout_constraintVertical_bias="0.073" />
 
     <TextView
         android:id="@+id/cName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="319dp"
+        android:layout_height="78dp"
+        android:fontFamily="@font/montez_regular"
         android:text="Hello"
-        android:textSize="30sp"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="55sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
