--- a/app/src/main/res/layout/activity_update_details_client.xml
+++ b/app/src/main/res/layout/activity_update_details_client.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    android:background="#fcfcfc"
+    android:background="@drawable/sky"
     tools:context="Activities.update_detalis_supplier">
 
     <androidx.cardview.widget.CardView
